# miscode

./: .gitignore  LICENSE  README.md
C Cpp/CInterpreter/: hello.c  xc.c
C Cpp/Course Design(Campus guide system)/: NUCMap.txt  SpotsSearchQuery.h  help.txt
C Cpp/Curriculum Design(Campus guide system)/: help.txt
C Cpp/dev/: COS.cpp  HeapSort.cpp  LetterRearrangement.cpp  LinearList.cpp  LinkedList.out  LinkedListReverse.cpp  MallocTest.c  Palindromes.cpp  PascalTriangle.cpp  StructSort.in  TheLongestPalindromes.cpp  Where'sWaldorf.cpp  approximation.cpp  daffodil.cpp  data.in  digit.cpp  fstreamTest.cpp  insertionSort.c  isFormulaEstablish.cpp  isLinkListOrder.c  library.c  maze.cpp  openTheLight.cpp  permutation.cpp  pinyin_program.cpp  reverseLinkList.c  sqrt.cpp  stat.cpp  upcase_lowcase.cpp
C Cpp/lispy/: lispy.cpp
C Cpp/stl/: sortTest.cpp  stringTest.cpp  vectorTest.cpp
CUDA/: thrust02.cu
CUDA/cuda-by-example/: .gitignore  CMakeLists.txt  basis.cu  calc_pi.cu  conv.cu  convolution.cu  device_props.cu  double_stream.cu  grid_block_thread.cu  grid_block_thread2.cu  matadd.cu  matmul.cu  matrix_add.cu  matrix_mul.cu  matrix_transpose.cu  single_stream.cu
CUDA/thrust-in-action/: CMakeLists.txt  thrust01.cu  thrust03.cu  thrust04.cu  thrust05.cu  thrust06.cu  thrust07.cu  thrust08.cu
Clojure/: .gitignore
Clojure/src/: Collections.clj  conditionalStatement.clj  interactionWithJava.clj  iteration.clj  listComprehension.clj  recursive.clj  structMap.clj  variables.clj
Cpp/Curriculum Design(Campus guide system)/: NUCMap.txt  menu.txt
Cpp/LFJ/: leapfrog.hpp  main.cpp
Cpp/kv-lite/: CMakeLists.txt  main.cpp
Flutter/Hello World/: README.md  pubspec.yaml
Go/Goroutine/: main.go
Go/TCP-scanner/: main.go
Go/algo/: main.go
Go/array/: array.go
Go/badger-demo/: main.go
Go/branch/: branch.go
Go/channel/: main.go
Go/enum/: main.go
Go/filelistingserver/: main.go
Go/function/: func.go
Go/functional/: fib.go
Go/interfaces/: main.go
Go/loop/: loop.go
Go/map/: maps.go
Go/mapreduce/: casegen.go  mapreduce.go  urltop10.go  urltop10_test.go
Go/maze/: maze.go
Go/recover/: main.go
Go/regex/: main.go
Go/selects/: main.go
Go/slices/: slices.go
Go/times/: main.go
Go/tree/: entry.go  tree.go
Hadoop/: README.md
Hadoop/ItemCFDemo/: README.md
Hadoop/MATMUL/: .gitignore
Java/LearnSpringBoot/: pom.xml
Java/Lexer/: .gitignore  README.md
Java/SpringBootDemo/: pom.xml
Java/SpringDemo/: .gitignore  pom.xml
Java/blog/: pom.xml
Java/gs-uploading-files/: .gitignore  .project  pom.xml
Java/springboot-file-upload/: pom.xml
Java/springbootpractice/: pom.xml
Kaggle/Housing Prices Competition for Kaggle Learn Users/: main.ipynb  submission.csv
Kotlin/: .gitignore  action.kt
Kotlin/bing-wallpaper-scraping/: .gitignore  build.gradle  settings.gradle
Kotlin/dsl/: Tag.kt
Kotlin/higher_order_functions/: InfixTest.kt
Kotlin/introduction/: Person.kt
Kotlin/more/: useRecursionInLambda.kt
Kotlin/oop/: objectTest.kt  sealed.kt
Kotlin/partial/: main.kt
Kotlin/script/: helloworld.kts
Kotlin/src/: action.kt
Lisp/: basic.lisp
Matlab/: gen_wave.m  music.m
Processing/FreeFall/: FreeFall.pde
Processing/Gravity/: Mover.pde
Processing/NoiseWalk/: NoiseWalk.pde
Processing/RandomWalkTraditional/: RandomWalkTraditional.pde
Processing/bouncingball_vectors/: bouncingball_vectors.pde
Processing/forces/: Mover.pde
Processing/forces_many/: Mover.pde  forces_many.pde
Processing/loadimage/: loadimage.pde
Processing/motion101_acceleratin_array/: Mover.pde  motion101_acceleratin_array.pde
Processing/motion101_acceleration/: motion101_acceleration.pde
Processing/sketch_170729a/: AndroidManifest.xml
Processing/test/: test.pde
Processing/vector_multiplication/: vector_multiplication.pde
Processing/vector_subtraction/: vector_subtraction.pde
Python/Git-like_Command_Parser/: main.py
Python/TensorFlow2Study/: 1-GradientDescent.py
Python/basic/: Iterators.py  Traversal.py  closure_test.py  (+7 more)
Scala/: fibonacci.scala
Shell/: push.sh  rename.sh  rm-space.sh  test.sh
(+833 files in other folders)
